--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                             <div class="col-xs-12 center">
                                 <nav>
                                     <ul class="menu navigation hiden-menu">
-                                        <li><a href="">Home</a></li>
-                                        <li><a href="">Generic</a></li>
-                                        <li><a href="">Elements</a></li>
+                                        <li><a href="./index.html">Home</a></li>
+                                        <li><a href="./second-pg.html">Generic</a></li>
+                                        <li><a href="./third.html">Elements</a></li>
                                     </ul>
                                     <div class="nav-mobile-menu">
                                         <span></span>
@@ -150,7 +150,7 @@
 
 <div class="contact-info">
     <div class="container">
-        <div class="row">
+        <div class="row center">
             <div class="block-title-2">
                 <h2>
                     Contact Me
