--- a/third.html
+++ b/third.html
@@ -73,17 +73,23 @@
                     </div>
                 </div>
 
-
-               <div class="block-bk-flex">
-                     <div class="block-bk">
+                <div class="block-bk-flex tab-title-items">
+                    <div class="tab-title-item">Interdum sapien gravida</div>
+                    <div class="tab-title-item">Faucibus consequat lorem</div>
+                    <div class="tab-title-item">Accumsan montes viverra</div>
+                </div>
+               <div class="block-bk-flex tab-container">
+                     <div class="block-bk tab-content">
                         <h3>Interdum sapien gravida</h3>
 							<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
                     </div>
-                    <div class="block-bk">
+                    <div class="block-bk tab-content">
                         <h3>Faucibus consequat lorem</h3>
-							<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+							<p>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum nemo impedit architecto labore incidunt doloremque nam et maxime nihil error praesentium, obcaecati eos officia tempore repellendus cupiditate esse reiciendis! Accusamus!
+                            </p>
                     </div>
-                    <div class="block-bk">
+                    <div class="block-bk tab-content">
                         <h3>Accumsan montes viverra</h3>
 							<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
                     </div>
