--- a/second-pg.html
+++ b/second-pg.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -52,7 +54,15 @@
 <section class="block-2 block alter-block">
     <div class="container">
         <div class="row center">
-                <div class="block-title-2">
+
+            <div class="container">
+                <div class="slider-block">
+                    <div>Slide 1</div>
+                    <div>Slide 2</div>
+                    <div>Slide 3</div>
+                  </div>
+            </div>
+                <div class=" block-title-2 ">
                     <div class="box">
                         <div class="title left">
                             <h2>NIBH NON LOBORTIS MUS NIBH</h2>
@@ -128,6 +138,10 @@
     </footer>
 
 </div>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="slick/slick.min.js"></script>
 <script src="app.js"></script>
 
 
